test/testcase/version_1/pass/playlist-extension.xspf
<?xml version="1.0" encoding="utf-8"?>
<playlist version="1" xmlns="http://xspf.org/ns/0/">
	<extension application="http://localhost/some/valid/url">
		<track>
			<info>Does NOT have to be an URL</info>
			<info>And can appear more than once</info>
		</track>
		<three>
			<four>
				<five>Deeper than usual</five>
			</four>
		</three>
	</extension>
	<trackList />
</playlist>
