test/testcase/version_1/fail/track-meta-rel-missing.xspf
<?xml version="1.0" encoding="UTF-8"?>
<playlist version="1" xmlns="http://xspf.org/ns/0/">
	<trackList>
		<track>
			<meta xml:base="foo">test</meta>
		</track>
	</trackList>
</playlist>

